--- a/project/myCrossing/src/app/cat-peces/cat-peces.component.html
+++ b/project/myCrossing/src/app/cat-peces/cat-peces.component.html
@@ -6,30 +6,30 @@
             <div style="width: 35%;" class="flex-column-centered">
                 <h3>Sombra</h3>
                 <div class="flex-centered" style="flex-wrap: wrap;" id="filtro-sombra">
-                  <button class="boton-alargado" (click)="filtraShadow('X-Small')" [class]="this.filtroAcShadow == 'X-Small' ? 'b-verde' : 'b-azul'" style="grid-column: 1;">Diminuta</button>
-                  <button class="boton-alargado" (click)="filtraShadow('Small')" [class]="this.filtroAcShadow == 'Small' ? 'b-verde' : 'b-azul'" style="grid-column: 2;">Pequeña</button>
-                  <button class="boton-alargado" (click)="filtraShadow('Medium')" [class]="this.filtroAcShadow == 'Medium' ? 'b-verde' : 'b-azul'" style="grid-column: 3;">Mediana</button>
-                  <button class="boton-alargado" (click)="filtraShadow('Large')" [class]="this.filtroAcShadow == 'Large' ? 'b-verde' : 'b-azul'" style="grid-column: 4;">Grande</button>
-                  <button class="boton-alargado" (click)="filtraShadow('X-Large')" [class]="this.filtroAcShadow == 'X-Large' ? 'b-verde' : 'b-azul'" style="grid-column: 1;">Muy grande</button>
-                  <button class="boton-alargado" (click)="filtraShadow('XX-Large')" [class]="this.filtroAcShadow == 'XX-Large' ? 'b-verde' : 'b-azul'" style="grid-column: 2;">Gigante</button>
-                  <button class="boton-alargado" (click)="filtraShadow('X-Large w/Fin')" [class]="this.filtroAcShadow == 'X-Large w/Fin' ? 'b-verde' : 'b-azul'" style="grid-column: 3;">Muy grande con aleta</button>
-                  <button class="boton-alargado" (click)="filtraShadow('Long')" [class]="this.filtroAcShadow == 'Long' ? 'b-verde' : 'b-azul'" style="grid-column: 4;">Alargada</button>
+                  <button class="boton-alargado" (click)="filtraShadow('X-Small')" [class]="this.filtroAcShadow == 'X-Small' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 1;">Diminuta</button>
+                  <button class="boton-alargado" (click)="filtraShadow('Small')" [class]="this.filtroAcShadow == 'Small' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 2;">Pequeña</button>
+                  <button class="boton-alargado" (click)="filtraShadow('Medium')" [class]="this.filtroAcShadow == 'Medium' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 3;">Mediana</button>
+                  <button class="boton-alargado" (click)="filtraShadow('Large')" [class]="this.filtroAcShadow == 'Large' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 4;">Grande</button>
+                  <button class="boton-alargado" (click)="filtraShadow('X-Large')" [class]="this.filtroAcShadow == 'X-Large' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 1;">Muy grande</button>
+                  <button class="boton-alargado" (click)="filtraShadow('XX-Large')" [class]="this.filtroAcShadow == 'XX-Large' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 2;">Gigante</button>
+                  <button class="boton-alargado" (click)="filtraShadow('X-Large w/Fin')" [class]="this.filtroAcShadow == 'X-Large w/Fin' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 3;">Muy grande con aleta</button>
+                  <button class="boton-alargado" (click)="filtraShadow('Long')" [class]="this.filtroAcShadow == 'Long' ? 'b-verde' : 'b-azul b-azul-hover'" style="grid-column: 4;">Alargada</button>
                 </div>
             </div>
             <div style="width: 20%;justify-content: unset;margin: 0 1vw" class="flex-column-centered">
               <h3>Lugares</h3>
               <div style="flex-wrap: wrap;" id="filtro-lugar">
-                <button class="boton-alargado" (click)="filtraWhe('Pond')" [class]="this.filtroAcWhe == 'Pond' ? 'b-verde' : 'b-azul'">Estanque</button>
-                <button class="boton-alargado" (click)="filtraWhe('River')" [class]="this.filtroAcWhe == 'River' ? 'b-verde' : 'b-azul'">Río</button>
-                <button class="boton-alargado" (click)="filtraWhe('Sea')" [class]="this.filtroAcWhe == 'Sea' ? 'b-verde' : 'b-azul'">Mar</button>
-                <button class="boton-alargado" (click)="filtraWhe('Pier')" [class]="this.filtroAcWhe == 'Pier' ? 'b-verde' : 'b-azul'">Muelle</button>
+                <button class="boton-alargado" (click)="filtraWhe('Pond')" [class]="this.filtroAcWhe == 'Pond' ? 'b-verde' : 'b-azul b-azul-hover'">Estanque</button>
+                <button class="boton-alargado" (click)="filtraWhe('River')" [class]="this.filtroAcWhe == 'River' ? 'b-verde' : 'b-azul b-azul-hover'">Río</button>
+                <button class="boton-alargado" (click)="filtraWhe('Sea')" [class]="this.filtroAcWhe == 'Sea' ? 'b-verde' : 'b-azul b-azul-hover'">Mar</button>
+                <button class="boton-alargado" (click)="filtraWhe('Pier')" [class]="this.filtroAcWhe == 'Pier' ? 'b-verde' : 'b-azul b-azul-hover'">Muelle</button>
               </div>
             </div>
             <div class="flex-column-centered" style="width: 35%;">
               <input [formControl]="busqueda" class="text-input" style="width: 80%;margin-top: 2vw" type="text" placeholder="Buscar">
               <div class="flex-column-entered" style="margin:0.5vw" [style.display]="this._verif.user == null ? 'none' : 'block'" id="filtro-usuario">
-                <button class="boton-alargado" (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'b-verde' : 'b-azul'">Obtenidos</button>
-                <button class="boton-alargado" (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'b-verde' : 'b-azul'">Me faltan</button>
+                <button class="boton-alargado" (click)="activaFiltro('obtenido')" [class]="this.botonFiltrar == 'obtenido' ? 'b-verde' : 'b-azul b-azul-hover'">Obtenidos</button>
+                <button class="boton-alargado" (click)="activaFiltro('falta')" [class]="this.botonFiltrar == 'falta' ? 'b-verde' : 'b-azul b-azul-hover'">Me faltan</button>
               </div>
             </div>
         </div>
@@ -202,7 +202,7 @@
 
     <div class="flex-column-centered">
       <ng-container *ngFor="let mes of meses | keyvalue">
-        <span class="boton-alargado no-pointer" style="margin: 0.2vw 0;width: 100%;" [class]="shownCreatureMeses.includes(mes.key)? 'b-verde' : 'b-azul'">{{mes.value}}</span>
+        <span class="boton-alargado no-pointer no-hover" style="margin: 0.2vw 0;width: 100%;" [class]="shownCreatureMeses.includes(mes.key)? 'b-verde' : 'b-azul'">{{mes.value}}</span>
       </ng-container>
     </div>
 
